syntax = "proto3";

package ai.metathings.service.deviced;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message CreateFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1 [(validator.field) = {msg_exists: true}];
}

message CreateFirmwareHubResponse {
	FirmwareHub firmware_hub = 1;
}
